<resources>
    <string name="app_name">Github Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="test_text">Este es un texto de prueba</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_description">Descripción del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="text_lang">Kotlin</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <!--Strings para pantalla de login -->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>


</resources>